--- a/15 - LocalStorage/style.css
+++ b/15 - LocalStorage/style.css
@@ -71,8 +71,12 @@
       margin-top: 20px;
     }
 
-    .add-items input {
+    .add-items input, button {
       padding:10px;
       outline:0;
       border:1px solid rgba(0,0,0,0.1);
+    }
+
+    .list-buttons {
+      margin-top: 20px;
     }
